k8s/my-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app-pod
  labels:
    app: my-app
    type: microservice
spec:
  containers:
  - name: my-app-container
    image: frankdevg/test-node:latest
    ports:
    - containerPort: 3000
    command: ["sh", "-c", "npm start"]
