k8s/my-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  rules:
    - host: frankdevgweb
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: my-app-service
                port:
                  number: 8000
